--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,7 +1,98 @@
+$default-font-size: 16px;
+$default-border-radius: 4px;
+$default-border-color: rgba(black, 0.08);
+$small-font-size: 13px;
+
+html {
+  padding: 15px;
+}
+
 body {
-  font-size: 16px;
+  font-size: $default-font-size;
   font-family: sans-serif;
-  margin: 15px;
+  margin: 0;
   width: 100%;
   height: 100%;
 }
+
+#home {
+  padding-bottom: 20px;
+}
+
+h3 {
+  margin-bottom: 0;
+}
+
+.repos {
+  .repo {
+    .repo-name {
+
+    }
+
+    .repo-url {
+      margin-top: 4px;
+      word-wrap: break-word;
+      font-size: 14px;
+      opacity: 0.5;
+    }
+  }
+}
+
+.packages {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  .package {
+    min-width: 40%;
+    width: 40%;
+    flex-grow: 1;
+    height: auto;
+    margin: 5px;
+    padding: 6px;
+    border: 1px solid $default-border-color;
+    border-radius: $default-border-radius;
+
+    .package-thumbnail {
+      width: 100%;
+    }
+
+    .footer {
+      margin-top: 20px;
+      font-size: $small-font-size;
+      a {
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+#install-repo {
+  margin-top: 20px;
+
+  input {
+    margin-top: 10px;
+    width: 100%;
+    height: 33px;
+    border: 1px solid $default-border-color;
+    border-style: solid;
+    border-radius: $default-border-radius;
+    padding-left: 5px;
+    font-size: $default-font-size;
+  }
+}
+
+// .button {
+//   padding: 5px;
+//   text-align: center;
+//   border: 1px solid gray;
+// }
+//
+// a.button {
+//   -webkit-appearance: button;
+//   -moz-appearance: button;
+//   appearance: button;
+//
+//   text-decoration: none;
+//   color: initial;
+// }
