Update package info for installed

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -17,6 +17,16 @@ html, body {
     font-size: 1rem !important;
   }
 
+  .package-notification {
+    margin: 0 !important;
+    margin-top: 0.6rem !important;
+    padding: 0.5rem !important;
+    .text {
+      font-size: 0.8rem !important;
+      line-height: 1rem !important;
+    }
+  }
+
   .name-input {
     font-size: 0.95rem;
     font-weight: bold;
