--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -32,7 +32,8 @@ html, body {
     font-weight: bold;
 
     &[type="text"][disabled] {
-       color: black;
+      color: black;
+      background-color: transparent;
     }
   }
 }
